<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashScreen!</string>
    <string name="app_name">Math in 60 Seconds</string>
    <string name="menu_play">Play</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_scores">Scores</string>
    <string name="menu_help">Help</string>
    <string name="select_math">Select Your Math</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    
</resources>