<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/whiteboard">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_name" 
        android:gravity="center" 
        android:textColor="@color/blue"
        android:textSize="40px"/>

    <TextView
        android:id="@+id/menuplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play" 
        android:textColor="@color/blue"
        android:textSize="70px"
        android:clickable="true"
        android:onClick="onPlayText"/>
    <TextView
        android:id="@+id/menusettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings" 
        android:textColor="@color/blue"
        android:textSize="70px"
        android:clickable="true"
        android:onClick="onSettingsText"/>
    <TextView
        android:id="@+id/menuscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_scores" 
        android:textColor="@color/blue"
        android:textSize="70px"
        android:clickable="true"
        android:onClick="onScoresText"/>
    <TextView
        android:id="@+id/menuhelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_help"
        android:textColor="@color/blue"
        android:textSize="70px" 
        android:clickable="true"
        android:onClick="onHelpText"/>
    
    
    

</LinearLayout>